refactor: update docs e param new_password in route
